feat: add grep context windows
